Update README for extended branch with 62 payload catalog
Document 20+ new chains: filter-bypass entries (ConcurrentHashMap,
TreeBag, LinkedHashSet), JNDI sinks for JDK 17+, and JDK module
open requirements. Add academic references (JDD, FLASH, GCMiner).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>